--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,13 @@
-<p>header works!</p>
-<div>Menus</div>
-<button>Click me</button>
+<!--
+    HTML Comment
+    Here will add menus
+    a: achor tag is use to navigate from one page to another
+
+    routerLink : is used to load the content without loading the entire page where as 'href' will reload the page.
+-->
+<div>
+    <a routerLink="/">Home</a> | 
+    <a routerLink="/about">About</a> |
+    <a routerLink="/todo">TODO App</a> |
+    <a routerLink="/contact">Contact</a>
+</div>
