firebase detup & end game

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     routerLink : is used to load the content without loading the entire page where as 'href' will reload the page.
 -->
 <div>
-    <a routerLink="/">Home</a> | 
+    <a routerLink="/" aria-label="Home">Home</a> | 
     <a routerLink="/about">About</a> |
     <a routerLink="/todo">TODO App</a> |
     <a routerLink="/contact">Contact</a>
